Restructure to clean monorepo with standalone modules
🏗️ MAJOR RESTRUCTURE: Clean monorepo architecture implemented

✅ Standalone Module Structure:
- TAB_V1/, TAE_V1/, TAO_V1/ are now independent projects
- Each module has its own pyproject.toml with UV dependencies
- Each module has its own .venv virtual environment
- Removed redundant nested folder structures (no more tab_v1/tab_v1)

🔐 Security-First Configuration:
- Secrets moved to secure /etc/TA_V8/[module]/secrets.env
- Non-sensitive config in project config.env files
- Clear separation between configuration and secrets
- Updated .gitignore to protect sensitive references

📦 UV Package Manager:
- All dependency management through UV (not pip)
- Simplified, focused dependency lists per module
- Clean build system with hatchling

🎯 Integration Layer:
- Main TA_V8 serves as orchestration/integration platform
- Each module can be developed and deployed independently
- Maintains communication interfaces between modules

This structure enables independent development while ensuring
secure secrets management and clean platform integration.

--- a/.gitignore
+++ b/.gitignore
@@ -121,12 +121,20 @@ celerybeat.pid
 
 # Environments
 .env
+.env.*
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Configuration files that may contain sensitive references
+config.local.env
+secrets.local.env
+
+# System secrets directory (should never be committed)
+/etc/TA_V8/
 
 # Spyder project settings
 .spyderproject
