--- a/RAG_MCP/pyproject.toml
+++ b/RAG_MCP/pyproject.toml
@@ -21,6 +21,22 @@ dependencies = [
     "python-multipart>=0.0.6",
     "prometheus-client>=0.19.0",
     "structlog>=23.2.0",
+    # Advanced chunking and NLP dependencies
+    "sentence-transformers>=2.2.2",
+    "ruptures>=1.1.9",
+    "spacy>=3.7.2",
+    "numpy>=1.24.3",
+    # Multi-agent system dependencies
+    "openai>=1.3.7",
+    "anthropic>=0.7.8",
+    # Ollama client for LLM-assisted chunking
+    "ollama>=0.2.1",
+    # MinIO client for object storage
+    "minio>=7.2.0",
+    # Configuration management
+    "python-dotenv>=1.0.0",
+    "pydantic-settings>=2.1.0",
+    "pip>=25.2",
 ]
 
 [project.optional-dependencies]
@@ -60,6 +76,9 @@ dev = [
     "isort>=5.12.0",
     "mypy>=1.5.0",
     "pre-commit>=3.0.0",
+    "httpx>=0.28.1",
+    "neo4j>=5.28.2",
+    "minio>=7.2.16",
 ]
 
 [tool.black]
