feat: Restore multi-agent RAG orchestration system
🤖 Restored comprehensive multi-agent system:

✅ RAG AGENT TEAM RESTORED:
- Multi-agent orchestration with specialized roles
- Retrieval Agent: Information discovery specialist
- Refiner Agent: Information synthesis specialist
- Response Agent: Expert response generator

✅ MCP INTEGRATION READY:
- Updated to work with new MCP microservices
- Connects to chunking, embedding, and retrieval MCP services
- Maintains session management and conversational context
- Full integration with Ollama LLM service

✅ PRODUCTION FEATURES:
- FastAPI endpoints with comprehensive error handling
- Health check monitoring for all services
- Performance metrics and logging
- Session-based conversational interactions
- Comprehensive source attribution and citations

✅ DEPLOYMENT INTEGRATION:
- Added to docker-compose-mcp.yml as orchestration layer
- Docker configuration for containerized deployment
- Service discovery and health monitoring
- Updated deployment scripts with agent team endpoint

🎯 ARCHITECTURE COMPLETE:
- MCP Microservices (ports 8001-8003) for specialized RAG operations
- Multi-Agent Orchestrator (port 8006) for complex query coordination
- Full integration with existing AI services infrastructure
- Ready for production deployment with complete monitoring

--- a/RAG_MCP/deployment/docker-compose-mcp.yml
+++ b/RAG_MCP/deployment/docker-compose-mcp.yml
@@ -125,6 +125,44 @@ services:
           cpus: '2'
           memory: 4G
 
+  # RAG Agent Team Orchestrator
+  rag-agent-team:
+    build:
+      context: ../..
+      dockerfile: infrastructure/docker/Dockerfile.agent_team
+    container_name: ta_v8_rag_agent_team
+    ports:
+      - "8006:8006"
+    environment:
+      # MCP Services connections
+      CHUNKING_MCP_URL: http://chunking-mcp:8001
+      EMBEDDING_MCP_URL: http://embedding-mcp:8002
+      RETRIEVAL_MCP_URL: http://retrieval-mcp:8003
+      # Ollama connection
+      OLLAMA_URL: http://ta_v8_ollama:11434
+      # Configuration
+      MCP_TRANSPORT_MODE: http
+      AGENT_TEAM_SERVICE_NAME: rag_agent_team_v1
+    depends_on:
+      - chunking-mcp
+      - embedding-mcp  
+      - retrieval-mcp
+      - ta_v8_ollama
+    networks:
+      - ta_v8_network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8006/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    deploy:
+      resources:
+        limits:
+          cpus: '2'
+          memory: 4G
+
 # ============ NETWORKS ============
 networks:
   ta_v8_network:
