--- a/RAG_MCP/pyproject.toml
+++ b/RAG_MCP/pyproject.toml
@@ -37,6 +37,8 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "pydantic-settings>=2.1.0",
     "pip>=25.2",
+    "langgraph>=0.6.7",
+    "autogen>=0.9.9",
 ]
 
 [project.optional-dependencies]
